services/price-buddy/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-buddy
  namespace: services
spec:
  selector:
    matchLabels:
      app: price-buddy
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: price-buddy
    spec:
      containers:
        - name: price-buddy
          image: jez500/pricebuddy:v1.0.42
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/storage
              name: price-buddy-storage
        - name: price-buddy-mysql
          image: mysql:8.2
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: price-buddy-database
        - name: price-buddy-scraper
          image: jez500/seleniumbase-scrapper:v1.0
          ports:
            - containerPort: 3000
      volumes:
      - name: price-buddy-storage
        persistentVolumeClaim:
          claimName:  price-buddy-storage-claim
      - name: price-buddy-database
        persistentVolumeClaim:
          claimName:  price-buddy-database-claim
