services/price-buddy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: price-buddy
  namespace: services
spec:
  selector:
    app: price-buddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
